--- a/.github/workflows/publish-demo.yml
+++ b/.github/workflows/publish-demo.yml
@@ -15,7 +15,7 @@ jobs:
       id-token: write
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
@@ -25,7 +25,7 @@ jobs:
     - name: Setup R
       uses: r-lib/actions/setup-r@v2
       with:
-        r-version: '4.4.0'
+        r-version: 'release'
 
     - name: Setup R packages
       uses: r-lib/actions/setup-r-dependencies@v2
@@ -82,7 +82,7 @@ jobs:
         quarto render index.qmd --config gallery_quarto.yml
     
     - name: Upload Pages Artifact
-      uses: actions/upload-pages-artifact@v1
+      uses: actions/upload-pages-artifact@v3
       with:
         path: "_site"
 
@@ -98,4 +98,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
