--- a/.github/workflows/publish-demo.yml
+++ b/.github/workflows/publish-demo.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
       with:
-        version: latest
+        version: release
 
     - name: Setup R
       uses: r-lib/actions/setup-r@v2
       with:
-        r-version: 'release'
+        r-version: release
 
     - name: Setup R packages
       uses: r-lib/actions/setup-r-dependencies@v2
