Ensure environment variable QUARTO_CHROME_HEADLESS_MODE is set to `new`, switch to using Quarto pre-release containing the enhancements allowing for headless chrome deployment.

--- a/.github/workflows/publish-demo.yml
+++ b/.github/workflows/publish-demo.yml
@@ -13,6 +13,8 @@ jobs:
     permissions:
       pages: write
       id-token: write
+    env:
+      QUARTO_CHROME_HEADLESS_MODE: "new"
 
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +22,7 @@ jobs:
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
       with:
-        version: release
+        version: pre-release
 
     - name: Setup R
       uses: r-lib/actions/setup-r@v2
